🗃 Improve stylings and packages️

--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -8,8 +8,8 @@ import Bleed from 'nextra-theme-docs/bleed'
 </div>
 <h2 style={{
         background: "-webkit-linear-gradient(45deg, #ED7BFF, #0085FF)",
-        webkitBackgroundClip: "text",
-        webkitTextFillColor: "transparent",
+        WebkitBackgroundClip: "text",
+        WebkitTextFillColor: "transparent",
         width: "160px",
         marginLeft: "90px",
         }}>Solathon</h2>
