--- a/docs/pages/models/publickey.mdx
+++ b/docs/pages/models/publickey.mdx
@@ -1,7 +1,4 @@
 <details open>
-<summary>Attributes</summary>
-<br/>
-- getUserGuild
-- getItems
-- getItems
+  <summary>Attributes</summary>
+  <br />- getUserGuild - getItems - getItems
 </details>
