📦Fix package issues with mdx

--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -24,3 +24,14 @@ import { Code } from '../components/Code';
 pip install solathon
 ```
 </Code>
+
+
+<Code>
+```python 
+from solathon import Client, PublicKey
+client = Client("https://api.devnet.solana.com")
+public_key = PublicKey("B3BhJ1nvPvEhx3hq3nfK8hx4WYcKZdbhavSobZEA44ai")
+balance = Client.get_balance(public_key)
+print(balance)
+```
+</Code>
