--- a/docs/pages/models/publickey.mdx
+++ b/docs/pages/models/publickey.mdx
@@ -1,16 +1,13 @@
-# PublicKey
-
-**Class representing a public key object. Preferred to use this over plain public key string**
-
 import { Code } from '/components/Code';
+
+# PublicKey
+**Class representing a public key object. Preferred to use this over plain public key string**
 
 <Code>
   ```python 
   class PublicKey(value: bytearray | bytes | int | str | List[int])
   ```
 </Code>
-
-import Callout from 'nextra-theme-docs/callout'
 
 > The class requires one value argument which can be string, bytes, bytearray or int array form of the public key.
 
@@ -20,6 +17,11 @@ import Callout from 'nextra-theme-docs/callout'
 #### Attributes
 *None*
 
+
 ## Attributes
 #### .to_base58
-<p>Converts the public key in base 58 form</p>
+<p>Converts the public key into base 58 form</p>
+
+
+#### Attributes
+*PublicKey class has no attributes*
