📚Add docs for transaction model

--- a/docs/pages/models/client.mdx
+++ b/docs/pages/models/client.mdx
@@ -122,7 +122,7 @@ def get_token_accounts_by_owner(public_key: PublicKey | str)
 </Code>
 
 #### .send_transaction
-Submits a signed transaction to the cluster for processing, recent blockhash is optional.
+Submits a signed [transaction object](/models/transaction) to the cluster for processing, recent blockhash is optional.
 
 <Code>
 ```python 
