--- a/docs/pages/models/publickey.mdx
+++ b/docs/pages/models/publickey.mdx
@@ -1,7 +1,7 @@
 import { Code } from '/components/Code';
 
 # PublicKey
-**Class representing a public key object. Preferred to use this over plain public key string**
+**Class representing a public key model. Preferred to use this over plain public key string**
 
 <Code>
   ```python 
@@ -18,10 +18,10 @@ import { Code } from '/components/Code';
 *None*
 
 
-## Attributes
+## Methods
 #### .to_base58
-<p>Converts the public key into base 58 form</p>
+Converts the public key into base 58 form
 
 
-#### Attributes
+## Attributes
 *PublicKey class has no attributes*
