🖍️ Remove white color from callout fonts

--- a/docs/pages/models/publickey.mdx
+++ b/docs/pages/models/publickey.mdx
@@ -33,5 +33,5 @@ def to_base58()
 
 ## Attributes
 <Callout>
-    <p style={{color: "white", fontSize:"1rem"}}>PublicKey class has no attributes.</p>
+    <p style={{fontSize:"1rem"}}>PublicKey class has no attributes.</p>
 </Callout>
