--- a/docs/pages/models/transaction.mdx
+++ b/docs/pages/models/transaction.mdx
@@ -68,7 +68,7 @@ def add_signature(pubkey: PublicKey | str, signature: bytes)
 ```
 </Code>
 <Callout emoji="⚠️" type="warning">
-    <p style={{color: "white", fontSize:"1rem"}}>This method is not stable right now.</p>
+    <p style={{fontSize:"1rem"}}>This method is not stable right now.</p>
 </Callout>
 
 #### .add_signer
@@ -80,7 +80,7 @@ def add_signer(keypair: Keypair)
 ```
 </Code>
 <Callout emoji="⚠️" type="warning">
-    <p style={{color: "white", fontSize:"1rem"}}>This method is not stable right now.</p>
+    <p style={fontSize:"1rem"}}>This method is not stable right now.</p>
 </Callout>
 
 #### .verify_signatures
