--- a/docs/pages/models/client.mdx
+++ b/docs/pages/models/client.mdx
@@ -136,7 +136,7 @@ print(tokens)
 </Code>
 
 <Callout emoji="⚠️" type="warning">
-    <p style={{color: "white", fontSize:"1rem"}}>This method returns token on mainnet only.</p>
+    <p style={{fontSize:"1rem"}}>This method returns token on mainnet only.</p>
 </Callout>
 
 #### .send_transaction
