🐛Fix wrong syntax typo

--- a/docs/pages/models/transaction.mdx
+++ b/docs/pages/models/transaction.mdx
@@ -80,7 +80,7 @@ def add_signer(keypair: Keypair)
 ```
 </Code>
 <Callout emoji="⚠️" type="warning">
-    <p style={fontSize:"1rem"}}>This method is not stable right now.</p>
+    <p style={{fontSize:"1rem"}}>This method is not stable right now.</p>
 </Callout>
 
 #### .verify_signatures
