☄️ Added 10 more methods

--- a/docs/pages/models/client.mdx
+++ b/docs/pages/models/client.mdx
@@ -18,6 +18,16 @@ import Callout from 'nextra-theme-docs/callout'
 - [get_block](#get_block)
 - [get_block_height](#get_block_height)
 - [get_block_production](#get_block_production)
+- [get_block_commitment](#get_block_commitment)
+- [get_blocks](#get_blocks)
+- [get_blocks_with_limit](#get_blocks_with_limit)
+- [get_block_time](#get_block_time)
+- [get_cluster_nodes](#get_cluster_nodes)
+- [get_epoch_info](#get_epoch_info)
+- [get_epoch_schedule](#get_epoch_schedule)
+- [get_fee_for_message](#get_fee_for_message)
+- [get_fees](#get_fees)
+- [get_first_available_block](#get_first_available_block)
 - [get_supply](#get_supply)
 - [get_identity](#get_identity)
 - [get_block](#get_block)
@@ -65,6 +75,100 @@ Returns recent block production information from the current or previous epoch.
 <Code>
 ```python 
 def get_block_production()
+```
+</Code>
+
+#### .get_block_commitment
+Returns commitment for particular block identified by slot.
+
+<Code>
+```python 
+def get_block_commitment(block: int)
+```
+</Code>
+
+#### .get_blocks
+Returns a list of confirmed blocks between two slots, end_slot is optional
+
+<Code>
+```python 
+def get_blocks(start_slot: int, end_slot: Optional[int] = None)
+```
+</Code>
+
+#### .get_blocks_with_limit
+Returns a list of confirmed blocks starting from a given slot to a limit.
+
+<Code>
+```python 
+def get_blocks_with_limit(start_slot: int, limit)
+```
+</Code>
+
+#### .get_block_time
+Returns the estimated production time of a block as Unix timestamp.
+
+<Code>
+```python 
+def get_block_time(block: int)
+```
+</Code>
+
+#### .get_cluster_nodes
+Returns information about all the nodes participating in the cluster
+
+<Code>
+```python 
+def get_cluster_nodes()
+```
+</Code>
+
+#### .get_epoch_info
+Returns information about the current epoch
+
+<Code>
+```python 
+def get_epoch_info()
+```
+</Code>
+
+#### .get_epoch_schedule
+Returns epoch schedule information from this cluster's genesis config
+
+<Code>
+```python 
+def get_epoch_schedule()
+```
+</Code>
+
+#### .get_fee_for_message
+Retuns the fee which network will charge for a particular message
+
+<Code>
+```python 
+def get_fee_for_message(message: str)
+```
+</Code>
+
+<Callout emoji="⚠️" type="warning">
+    <p style={{fontSize:"1rem"}}>This method is only available in solana-core v1.9 or newer. For now, use get_fees method.</p>
+</Callout>
+
+#### .get_fees
+Returns a recent block hash from the ledger, a fee schedule that can be used to compute the cost of submitting a transaction using it, and the last slot in which the blockhash will be valid
+
+<Code>
+```python 
+def get_fees()
+```
+</Code>
+
+#### .get_first_available_block
+Returns the slot of the lowest confirmed block that has not been purged from the ledger
+
+<Code>
+```python 
+def get_first_available_block()
 ```
 </Code>
 
