--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -36,11 +36,14 @@ Everything has been simplified down to be as easy and quick as possible to use, 
 
 <Code>
 ```python 
-# Simple example to fetch a wallet's balance;
-from solathon import Client, PublicKey;
+# Simple example to fetch a wallet's balance
+ㅤ
+from solathon import Client, PublicKey
+ㅤ
 client = Client("https://api.devnet.solana.com")
 public_key = PublicKey("B3BhJ1nvPvEhx3hq3nfK8hx4WYcKZdbhavSobZEA44ai")
-balance = Client.get_balance(public_key);
+balance = Client.get_balance(public_key)
+ㅤ
 print(balance)
 ```
 </Code>
