--- a/docs/pages/models/keypair.mdx
+++ b/docs/pages/models/keypair.mdx
@@ -18,7 +18,7 @@ import { Code } from '/components/Code';
 #### Attributes
 - [public_key](#public_key)
 - [private_key](#private_key)
-- [keypair](#keypair)
+- [key_pair](#key_pair)
 
 
 ## Methods
@@ -50,5 +50,5 @@ Returns the keypair object's public key.
 #### .private_key
 Returns the keypair object's private key.
 
-#### .keypair
+#### .key_pair
 Returns the keypair value itself in bytes.
