--- a/docs/pages/models/keypair.mdx
+++ b/docs/pages/models/keypair.mdx
@@ -5,7 +5,7 @@ import { Code } from '/components/Code';
 
 <Code>
   ```python 
-  class Keypair(value: Optional[NaclPrivateKey] = None)
+  class Keypair(value: NaclPrivateKey | None = None)
   ```
 </Code>
 
