--- a/docs/pages/models/publickey.mdx
+++ b/docs/pages/models/publickey.mdx
@@ -43,4 +43,4 @@ def base58_decode()
 ## Attributes
 
 #### .byte_value
-Returns the byte value of the public key. Recommended to use ```bytes()``` function and passing to public key to get the byte value.
+Returns the byte value of the public key. Recommended to use ```bytes()``` function and passing to public key to get the byte value over this attribute.
