--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -26,17 +26,20 @@ pip install solathon
 </Code>
 
 ### Feature rich
-Solathon covers most of the Solana JSON RPC. Other than that, it provides web3 authorization, blockchain storage and utility functions.
+Solathon covers most of the Solana JSON RPC. Other than that, it provides utility functions which come in handy often.
 
 ### High performance
-Being light weight and optimized for the best performence; Solathon comes with batteries included without being too heavy.
+Being light weight and optimized for the best performance; Solathon comes with batteries included without being too heavy.
 
 ### Easy to use
-Everything has been simplified down to be as easy and quick as possible to use, using object-oriented approach it makes everything easy to understand and work with.
+Everything has been simplified down for it to be easy to use, using object-oriented approach, Solathon makes everything easy to understand and work with.
+
+### Async support
+Solathon supports both synchronous and asynchronous clients, use the one more suitable for your application.
 
 <Code>
 ```python 
-# Simple example to fetch a wallet's balance
+# Simple example to fetch a wallet's balance using synchronous client
 ㅤ
 from solathon import Client, PublicKey
 ㅤ
