--- a/docs/pages/clients/client_async.mdx
+++ b/docs/pages/clients/client_async.mdx
@@ -241,14 +241,14 @@ Example:
 
 <Code>
 ```python 
-from solathon import Client, PublicKey
+from solathon import AsyncClient, PublicKey
 ㅤ
-client = Client("https://api.mainnet-beta.solana.com")
+client = AsyncClient("https://api.mainnet-beta.solana.com")
 ㅤ
 public_key = PublicKey("B3BhJ1nvPvEhx3hq3nfK8hx4WYcKZdbhavSobZEA44ai")
 program_id = "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA" # Token program ID
 ㅤ
-tokens = client.get_token_accounts_by_owner(public_key, program_id)
+tokens = await client.get_token_accounts_by_owner(public_key, program_id)
 ㅤ
 print(tokens)
 ```
@@ -274,22 +274,29 @@ Example:
 
 <Code>
 ```python 
-from solathon import Client, Transaction, PublicKey, Keypair
 import time
+from solathon.core.instructions import transfer
+from solathon import AsyncClient, Transaction, PublicKey, Keypair
 ㅤ
-client = Client("https://api.devnet.solana.com")
+client = AsyncClient("https://api.devnet.solana.com")
 ㅤ
 sender = Keypair()
 receiver = PublicKey("B3BhJ1nvPvEhx3hq3nfK8hx4WYcKZdbhavSobZEA44a")
 amount = 10000  # This is the amount in lamports
 ㅤ
 # Requesting airdrop to get some devnet tokens for the transaction to succeed
-res = client.request_airdrop(sender.public_key, amount + amount)
+res = await client.request_airdrop(sender.public_key, amount + amount)
 print("Airdrop response: ", res)
-time.sleep(15) # 15 second delay to make sure we get enough time to receive airdrop tokens
+time.sleep(20) # 20 second delay to make sure we get enough time to receive airdrop tokens
 ㅤ
-transaction = Transaction(sender, receiver, amount)
-result = client.send_transaction(transaction)
+# Creating transfer instruction
+instruction = transfer(
+        from_public_key=sender.public_key,
+        to_public_key=receiver, 
+        lamports=100
+    )
+transaction = Transaction(instructions=[instruction], signers=[sender])
+result = await client.send_transaction(transaction)
 ㅤ
 print("Transaction response: ", result)
 ```
