--- a/docs/pages/clients/client_async.mdx
+++ b/docs/pages/clients/client_async.mdx
@@ -1,7 +1,7 @@
 import { Code } from '/components/Code';
 import Callout from 'nextra-theme-docs/callout'
 
-# Client
+# AsyncClient
 **The base ***async*** client object used to interact with the blockchain. This is is identical to normal sync client, the only difference is that all methods are asynchronous.**
 
 <Code>
@@ -10,7 +10,7 @@ import Callout from 'nextra-theme-docs/callout'
   ```
 </Code>
 
-> To initialise a async client, one of the three [RPC cluster endpoint URLs](https://docs.solana.com/cluster/rpc-endpoints) must be passed. When running a local cluster, the local argument must be passed as true for the local endpoint to work.
+> To initialize a async client, one of the three [RPC cluster endpoint URLs](https://docs.solana.com/cluster/rpc-endpoints) must be passed. When running a local cluster, the local argument must be passed as true for the local endpoint to work.
 
 #### Methods
 - [refresh_http](#refresh_http)
@@ -229,11 +229,14 @@ async def get_recent_blockhash()
 </Code>
 
 #### .get_token_accounts_by_owner
-Returns all SPL Token accounts of the public key provided. Either mint_id or program_id keyword argument is required, encoding is optional.
+Returns all SPL Token accounts of the public key provided. Either `mint_id` or `program_id` keyword argument is required, encoding is optional.
 
 <Code>
 ```python 
-async def get_token_accounts_by_owner(public_key: PublicKey | str, **kwargs)
+async def get_token_accounts_by_owner(
+    public_key: PublicKey | str, 
+    **kwargs
+)
 ```
 </Code>
 
@@ -241,16 +244,20 @@ Example:
 
 <Code>
 ```python 
+import asyncio
 from solathon import AsyncClient, PublicKey
 ㅤ
-client = AsyncClient("https://api.mainnet-beta.solana.com")
+async def main():
+    client = AsyncClient("https://api.mainnet-beta.solana.com")
+    ㅤ
+    public_key = PublicKey("B3BhJ1nvPvEhx3hq3nfK8hx4WYcKZdbhavSobZEA44ai")
+    # Token program ID
+    program_id = "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA"
+    ㅤ
+    tokens = await client.get_token_accounts_by_owner(public_key, program_id)
+    print(tokens)
 ㅤ
-public_key = PublicKey("B3BhJ1nvPvEhx3hq3nfK8hx4WYcKZdbhavSobZEA44ai")
-program_id = "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA" # Token program ID
-ㅤ
-tokens = await client.get_token_accounts_by_owner(public_key, program_id)
-ㅤ
-print(tokens)
+asyncio.run(main)
 ```
 </Code>
 
@@ -258,15 +265,27 @@ print(tokens)
     <p style={{fontSize:"1rem"}}>This method returns token on mainnet only.</p>
 </Callout>
 
+#### .request_airdrop
+Requests the amount of lamport specified to be airdropped to the public key.
+
+<Code>
+```python 
+def request_airdrop(
+    public_key: public_key, 
+    amount: int
+)
+```
+</Code>
+
 #### .send_transaction
 Submits a signed [transaction object](/models/transaction) to the cluster for processing, recent blockhash is optional.
 
 <Code>
 ```python 
 async def send_transaction(
-                    transaction: Transaction, 
-                    recent_blockhash: str | None = None
-                    )
+    transaction: Transaction, 
+    recent_blockhash: str | None = None
+)
 ```
 </Code>
 
@@ -274,31 +293,35 @@ Example:
 
 <Code>
 ```python 
-import time
+import time, asyncio
 from solathon.core.instructions import transfer
 from solathon import AsyncClient, Transaction, PublicKey, Keypair
 ㅤ
-client = AsyncClient("https://api.devnet.solana.com")
-ㅤ
-sender = Keypair()
-receiver = PublicKey("B3BhJ1nvPvEhx3hq3nfK8hx4WYcKZdbhavSobZEA44a")
-amount = 10000  # This is the amount in lamports
-ㅤ
-# Requesting airdrop to get some devnet tokens for the transaction to succeed
-res = await client.request_airdrop(sender.public_key, amount + amount)
-print("Airdrop response: ", res)
-time.sleep(20) # 20 second delay to make sure we get enough time to receive airdrop tokens
-ㅤ
-# Creating transfer instruction
-instruction = transfer(
-        from_public_key=sender.public_key,
-        to_public_key=receiver, 
-        lamports=100
+async def main():
+    client = AsyncClient("https://api.devnet.solana.com")
+    ㅤ
+    sender = Keypair()
+    receiver = PublicKey("B3BhJ1nvPvEhx3hq3nfK8hx4WYcKZdbhavSobZEA44a")
+    amount = 10000  # This is the amount in lamports
+    ㅤ
+    # Requesting airdrop to get some devnet tokens for the transaction to succeed
+    res = await client.request_airdrop(sender.public_key, amount + amount)
+    print("Airdrop response: ", res)
+    # 20 second delay to make sure we get enough time to receive airdrop tokens
+    time.sleep(20)
+    ㅤ
+    # Creating transfer instruction
+    instruction = transfer(
+            from_public_key=sender.public_key,
+            to_public_key=receiver, 
+            lamports=100
     )
-transaction = Transaction(instructions=[instruction], signers=[sender])
-result = await client.send_transaction(transaction)
+    transaction = Transaction(instructions=[instruction], signers=[sender])
+    result = await client.send_transaction(transaction)
+    ㅤ
+    print("Transaction response: ", result)
 ㅤ
-print("Transaction response: ", result)
+asyncio.run(main())
 ```
 </Code>
 
